Create Button component

--- a/calculator.html
+++ b/calculator.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <title>Redux tutorial</title>
-<div id="a"></div>
+<body>
+<div id="calculator"></div>
 <script src="build/bundle_calc.js"></script>
+</body>
