Add initial styles

--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,11 @@
 <!doctype html>
-<title>Redux tutorial</title>
+<head>
+  <title>Redux tutorial</title>
+  <link rel="stylesheet" href="calculator.css">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+
+</head>
 <body>
-<div id="calculator"></div>
-<script src="build/bundle_calc.js"></script>
+  <div id="calculator"></div>
+  <script src="build/bundle_calc.js"></script>
 </body>
